--- a/donation.html
+++ b/donation.html
@@ -63,7 +63,7 @@ a:link {
 
 <div class="responsive">
   <div class="gallery">
-      <img src="pen.png" alt="Writing Tools" width="600" height="400" onclick="pencilpic()">
+      <img src="Fir3fly/Pen.png" alt="Writing Tools" width="600" height="400" onclick="pencilpic()">
     <div class="desc" id="pcil">Click here to see the list of writing tools we need.</div>
   </div>
 </div>
