--- a/About_Us.html
+++ b/About_Us.html
@@ -150,7 +150,7 @@ div {
    I’m very excited about this website because I’m helping change the world.</p4>
 </span>
 <span class="nne">
-  <img id="nne" src="nneoma.jpg" height="260px" width="180px">
+  <img id="nne" src="IMG_9320.JPG" height="260px" width="180px">
 </span>
 
   <span class = "nneoma">
@@ -160,7 +160,7 @@ div {
    I’m very excited about this website because I am making a difference in other people’s life.</p6>
  </span>
  <span class="tob">
-   <img id="tob" src="tobenna.jpg" height="260px" width="180px">
+   <img id="tob" src="IMG_9326.JPG" height="260px" width="180px">
  </span>
 
  <span class = "tobenna">
@@ -170,7 +170,7 @@ div {
   I’m very excited about this website because it brings me joy to help people.</p8>
 </span>
 <span class="san">
-  <img id="san" src="sana.jpg" height="260px" width="180px">
+  <img id="san" src="IMG_9345.JPG" height="260px" width="180px">
 </span>
 
 <span class = "sana">
