--- a/donation.html
+++ b/donation.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-  <title> Donations </title>
+  <title> Donation </title>
   <link rel="stylesheet" type="text/css" href="Donation(n).css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
