--- a/About_Us.html
+++ b/About_Us.html
@@ -123,9 +123,40 @@ div {
 <!-- Group picture -->
 
 <span class="group">
-  <img id="group" src="group.jpg" height="380px" width="880px">
-</span>
 
+<div class="slideshow-container">
+
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 3</div>
+    <img src="IMG_9358.JPG" style="width:50%">
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 3</div>
+    <img src="IMG_9352.JPG" style="width:50%">
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 3</div>
+    <img src="IMG_9310.JPG" style="width:50%">
+  </div>
+</div>
+
+<br>
+
+<div style="text-align:center">
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
+
+</div>
+
+<script src= slideshow.js> </script>
+
+
+</span>
+</span>
+  
 
 <!-- Pictures and short bios for team -->
 <span class="fav">
