--- a/donation.html
+++ b/donation.html
@@ -4,7 +4,7 @@
 
 <head>
   <title> Donations </title>
-  <link rel="stylesheet" type="text/css" href="Donation.css">
+  <link rel="stylesheet" type="text/css" href="donation.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
     
