--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
         .secondText {
      text-align: right;
   font-size: 30px;
-  font-family: 'Papyrus';
+  font-family: 'century gothic';
 }
   
       </style>
