--- a/About_Us.html
+++ b/About_Us.html
@@ -87,7 +87,7 @@ div {
 .group {
      position: absolute;
      width: 350px;
-     /*left: 270px;*/
+     left: 270px;
      bottom: 55px;
    }
  .goal {
