--- a/About_Us.html
+++ b/About_Us.html
@@ -88,7 +88,7 @@ div {
      position: absolute;
      width: 350px;
      left: 270px;
-     bottom: 55px;
+     top: 55px;
    }
  .goal {
     text-align: center;
@@ -128,17 +128,17 @@ div {
 
   <div class="mySlides fade">
     <div class="numbertext">1 / 3</div>
-    <img src="IMG_9358.JPG" style="width:200%; height:210%">
+    <img src="IMG_9358.JPG" style="width:200%; height:200%">
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 3</div>
-    <img src="IMG_9352.JPG" style="width:200%; height:210%">
+    <img src="IMG_9352.JPG" style="width:200%; height:200%">
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">3 / 3</div>
-    <img src="IMG_9310.JPG" style="width:200%; height:210%">
+    <img src="IMG_9310.JPG" style="width:200%; height:200%">
   </div>
 </div>
 
