--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
       </style>
     </head>
 
-    <body  style = "background-color: #D4CBE5">
+    <body  style = "background-color: #f0fff0">
   <h1 style = "font-family:Papyrus; text-align: right; font-size: 50px">Fir3fly - <span class = "secondText"> Easing the path to education.</span></h1>
       <h2>
      <meta name="viewport" content="width=device-width, initial-scale=1">
