--- a/About_Us.html
+++ b/About_Us.html
@@ -159,7 +159,7 @@ div {
 
 <!-- Pictures and short bios for team -->
 <span class="fav">
-  <img id="Fav" src="favour.jpg" height="260px" width="180px">
+  <img id="Fav" src="IMG_0898.JPG" height="260px" width="180px">
 </span>
 
 <span class = "favour">
@@ -170,7 +170,7 @@ div {
   I am very excited about this website due to the fact that it is all about helping others in need and just putting a smile on peoples faces, which is something you would do as a christian.</p2>
 </span>
 <span class="kem">
-  <img id="kem" src="kemi.jpg" height="260px" width="180px">
+  <img id="kem" src="IMG_9338.JPG" height="260px" width="180px">
 </span>
 
   <span class = "kemi">
