--- a/About_Us.html
+++ b/About_Us.html
@@ -8,6 +8,7 @@
 
 <body>
   <style>
+    <body  style = "background-color: #A9A9A9 ">
 a:link {
   font-size: 25px;
   font-family: 'century gothic'
