--- a/donation.html
+++ b/donation.html
@@ -7,10 +7,10 @@
   <link rel="stylesheet" type="text/css" href="donation.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
-    
+
 <body>
 
-<h2>Fir3fly -
+<h2 id="Tit">Fir3fly -
   <span class = "secondText"> Easing the path to education.</span></h2>
 
 <div class="w3-container">
@@ -51,11 +51,20 @@
 </div>
 <script src="baglist.js"></script>
 
+<div class="responsive" id="kaching">
+  <div class="gallery">
+      <img src="dollar2.png" alt="money" width="600" height="400" onclick="moneypic()" >
+    <div class="desc" id="kng">Click here to see how to donate to our cause.</div>
+    <p id="but"><button><a href="https://www.gofundme.com/fir3fly"</a></button></p>
+    <button class ="button button3" id = "mop">Donate Now</button>
+  </div>
+</div>
+<script src="moneylist.js"></script>
+
 <div class="clearfix"></div>
 
-<p><button><a href="https://www.gofundme.com/fir3fly"</a></button></p>
 
-<button class="button button3">Donate Now</button>
+
 
 </body>
 </html>
