--- a/donation.html
+++ b/donation.html
@@ -55,8 +55,7 @@
   <div class="gallery">
       <img src="dollar2.png" alt="money" width="600" height="400" onclick="moneypic()" >
     <div class="desc" id="kng">Click here to see how to donate to our cause.</div>
-    <p id="but"><button><a href="https://www.gofundme.com/fir3fly"</a></button></p>
-    <button class ="button button3" id = "mop">Donate Now</button>
+    <a href="https://www.gofundme.com/fir3fly" class="button" id="but"> Donate now </a>
   </div>
 </div>
 <script src="moneylist.js"></script>
