--- a/donation.html
+++ b/donation.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<h2 id="Tit">Fir3fly -
+<h2 id="Tit" style = "font-family: Papyrus;">Fir3fly -
   <span class = "secondText"> Easing the path to education.</span></h2>
 
 <div class="w3-container">
