--- a/Location.html
+++ b/Location.html
@@ -15,16 +15,20 @@ a:link {
   font-family: 'century gothic'
 }
      .secondText {
-  font-size: 20px;
+ text-align: right;
+  font-size: 30px;
+  font-family: 'century gothic';
+
 }
 
 </style>
-  
+
  <h1 style = "text-align: left; text-size: 90px">Fir3fly - <span class = "secondText"> Easing the path to education.</span></h1>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<body>
+<body style = "background-color: #ffefdb">
+
 <div class="w3-container">
 
 
