--- a/Location.html
+++ b/Location.html
@@ -12,7 +12,7 @@
 
 a:link {
   font-size: 25px;
-  font-family: 'century gothic'
+  font-family: 'papyrus'
 }
      .secondText {
  text-align: right;
@@ -23,7 +23,7 @@ a:link {
 
 </style>
 
- <h1 style = "text-align: right; text-size: 90px">Fir3fly - <span class = "secondText"> Easing the path to education.</span></h1>
+ <h1 style = "Font-family: papyrus; text-align: right; font-size: 50px">Fir3fly - <span class = "secondText"> Easing the path to education.</span></h1>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
