--- a/Ways_We_Give_Back.html
+++ b/Ways_We_Give_Back.html
@@ -7,14 +7,17 @@
   <style>
 a:link {
   font-size: 25px;
-  font-family: 'century gothic'
+  font-family: 'papyrus'
 }
     .secondText {
-  font-size: 20px;
+ text-align: right;
+  font-size: 30px;
+  font-family: 'century gothic';
 }
 
+
   </style>
-    <h1 style = "text-align: left; text-size: 90px">Fir3fly - <span class = "secondText"> Easing the path to education.</span></h1>
+    <h1 style = "font-family:papyrus;text-align: right; text-size: 50px">Fir3fly - <span class = "secondText"> Easing the path to education.</span></h1>
   <h2>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
