--- a/Ways_We_Give_Back.html
+++ b/Ways_We_Give_Back.html
@@ -3,7 +3,7 @@
 <head>
   <title> Ways We Give Back </title>
 </head>
-<body>
+<body  style = "background-color: #ffefdb">
   <style>
 a:link {
   font-size: 25px;
