--- a/Events.html
+++ b/Events.html
@@ -123,15 +123,16 @@
  
 
 <body>
- <h1 style = "text-align: left; text-size: 90px">Fir3fly - <span class = "secondText"> Easing the path to education.</span></h1>
+ <h1 style = "text-align: right; text-size: 90px; font-family: papyrus">Fir3fly - <span class = "secondText"> Easing the path to education.</span></h1>
  <h2>
  <style>
 a:link {
   font-size: 25px;
-  font-family: 'century gothic'
+  font-family: 'papyrus';
 }
    .secondText {
   font-size: 20px;
+  text-align:right;
 }
 
  </style>
@@ -149,10 +150,11 @@ a:link {
   <a href="Events.html" class="w3-bar-item w3-button">Events</a>
  
  </h2>
+  <h3 style= "text-align: center"> The calender shows upcoming events in the Fir3fly organisation. </h3>
   <div id="calendar"></div>
  
  
- <h3 style= "text-align: center"> The calender shows upcoming events in the Fir3fly organisation. </h3>
+
  
  
         
