--- a/Events.html
+++ b/Events.html
@@ -122,7 +122,7 @@
 </head>
  
 
-<body>
+<body style = "background-color: #ffefdb">
  <h1 style = "text-align: right; text-size: 90px; font-family: papyrus">Fir3fly - <span class = "secondText"> Easing the path to education.</span></h1>
  <h2>
  <style>
