--- a/Events.html
+++ b/Events.html
@@ -16,6 +16,7 @@
 .fc-event-hover {
   position: relative !important;
   height: 17px;
+   background: red;
 }
 .fc-event-hover .fc-content {
   position: absolute !important;
@@ -32,6 +33,7 @@
 .fc-content-skeleton tr td:last-child .fc-event-hover .fc-content {
   left: auto;
   right: 0;
+   background: red;
 }
 </style>
 </head>
