--- a/About_Us.html
+++ b/About_Us.html
@@ -60,30 +60,35 @@ div {
   width: 280px;
   left: 350px;
   bottom: -1200px;
+  border: 3px solid black
 }
 .kem {
   position: absolute;
   width: 280px;
   left: 200px;
   bottom: -840px;
+  border: 3px solid black
 }
 .nne {
   position: absolute;
   width: 280px;
   left: 200px;
   bottom: -470px;
+  border: 3px solid black
 }
 .tob {
   position: absolute;
   width: 280px;
   left: 800px;
   bottom: -840px;
+  border: 3px solid black
 }
 .san {
   position: absolute;
   width: 280px;
   left: 800px;
   bottom: -470px;
+  border: 3px solid black
 }
 .group {
      position: absolute;
