--- a/donation.html
+++ b/donation.html
@@ -17,7 +17,7 @@
 
 
 <div class="w3-bar w3-border w3-light-grey">
-  <a href="home.html" class="w3-bar-item w3-button w3-green">Home</a>
+  <a href="home.html" class="w3-bar-item w3-button w3-white">Home</a>
   <a href="About_Us.html" class="w3-bar-item w3-button">About Us</a>
   <a href="Location.html" class="w3-bar-item w3-button">Locations</a>
   <a href="Ways_We_Give_Back.html" class="w3-bar-item w3-button">Ways to give back</a>
