--- a/donation.html
+++ b/donation.html
@@ -10,8 +10,7 @@
 
 <body>
 
-<h2 id="Tit">Fir3fly -
-  <span class = "secondText"> Easing the path to education.</span></h2>
+<h1 style = "Font-family: papyrus; text-align: right; font-size: 50px">Fir3fly - <span class = "secondText"> Easing the path to education.</span></h1>
 
 <div class="w3-container">
 
