--- a/Ways_We_Give_Back.html
+++ b/Ways_We_Give_Back.html
@@ -17,7 +17,7 @@ a:link {
 
 
   </style>
-    <h1 style = "font-family:papyrus;text-align: right; text-size: 50px">Fir3fly - <span class = "secondText"> Easing the path to education.</span></h1>
+    <h1 style = "Font-family: papyrus; text-align: right; font-size: 50px">Fir3fly - <span class = "secondText"> Easing the path to education.</span></h1>
   <h2>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
