--- a/About_Us.html
+++ b/About_Us.html
@@ -8,7 +8,7 @@
 
 <body>
   <style>
-    <body  style = "background-color: #A9A9A9 ">
+    <body  style = "background-color: #ffefdb ">
 a:link {
   font-size: 25px;
   font-family: 'century gothic'
