--- a/Events.html
+++ b/Events.html
@@ -3,32 +3,27 @@
 
 <head>
 <style>
-
  .logo-font {
   font-weight: normal;
   font-style: normal;
   font=family: 'Comic Sans';
   }
-
-
-
-
 .fc-event-hover {
   position: relative !important;
-  height: 17px;
+  height: 14px;
    background: red;
 }
 .fc-event-hover .fc-content {
   position: absolute !important;
   top: -1px;
   left: 0;
-  background: red;
+
   z-index: 99999;
   width: auto;
   overflow: visible !important;
-  background-color: olive;
+  background-color:#e8e5ff;
   padding: 1px;
-  border-radius: 2px;
+  border-radius: 1px;
 }
 .fc-content-skeleton tr td:last-child .fc-event-hover .fc-content {
   left: auto;
@@ -57,7 +52,7 @@
         allDaySlot: false,
         timeFormat: 'H:mm',
         axisFormat: 'H:mm',
-        height: 650,
+        height: 300,
         defaultDate: '2017-07-12',
         editable: true,
         displayEventEnd: {
@@ -122,7 +117,7 @@
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.7.3/fullcalendar.min.css" />
   <link rel="stylesheet" href="style.css" />
 </head>
- 
+
 
 <body style = "background-color: #ffefdb">
  <h1 style = "text-align: right; text-size: 50px; font-family: papyrus">Fir3fly - <span class = "secondText"> Easing the path to education.</span></h1>
@@ -137,7 +132,6 @@ a:link {
   text-align:right;
   font-family:'century gothic';
 }
-
  </style>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -151,19 +145,18 @@ a:link {
   <a href="Ways_We_Give_Back.html" class="w3-bar-item w3-button">Ways to give back</a>
   <a href="donation.html" class="w3-bar-item w3-button">Donations</a>
   <a href="Events.html" class="w3-bar-item w3-button">Events</a>
- 
+
  </h2>
-  
+
   <div id="calendar"></div>
- 
+
  <h3 style= "text-align: center"> The calender shows upcoming events in the Fir3fly organisation. </h3>
 
- 
- 
-        
+
+
+
 
 
 </body>
 
 </html>
-
