--- a/home.html
+++ b/home.html
@@ -106,7 +106,7 @@ li a:hover:not(.active) {
         </div>
          <div class="mySlides fade">
           <div class="numbertext">5 / 6</div>
-          <img src="images1.jpg" style="width:60%">
+          <img src="images1.jpg" style="width:60%" "height:50%">
         </div>
           <div class="mySlides fade">
           <div class="numbertext">6 / 6</div>
