--- a/About_Us.html
+++ b/About_Us.html
@@ -214,7 +214,7 @@ div {
 <!-- Goals section for page -->
 
 <span class = "goal">
-     <p11 style="font-size: 45px; " > <em> <b> Goal </b> </em></p9>
+     <p11 style="font-size: 45px; " > <em> Fir3fy's Goal  </em></p9>
      <br>
 <p12 style="font-size: 35px;" > Our goal for the project is to expand and become worldwide someday, so we can help children all over the world to get a better education.</p12>
 </span>
