--- a/About_Us.html
+++ b/About_Us.html
@@ -1,222 +1,127 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-
   <title> About Us </title>
-
-  </head>
-
-<body  style = "background-color: #ffefdb">
-  <style>
-    
-a:link {
-  font-size: 25px;
-  font-family: 'papyrus';
-}
-
-<style>
-div {
-    background-color: white;
-    width: 300px;
-    /*border: 10px white;*/
-    padding: 20px;
-    margin: 20px;
-    position: relative;
-    left: 350px;
-    top: 350px;
-}
-.kemi {
-  position: absolute;
-  width: 300px;
-  left: 410px;
-  bottom: -770px;
-}
-.favour {
-  position: absolute;
-  width: 300px;
-  left:580px;
-  bottom:-1150px;
-}
-.nneoma {
-  position: absolute;
-  left:410px ;
-  width: 300px;
-  bottom:-450px;
-}
-.tobenna {
-  position: absolute;
-  width: 300px;
-  left:1000px ;
-  bottom:-735px ;
-}
-.sana {
-  position: absolute;
-  width: 300px;
-  left:1000px ;
-  bottom:-450px ;
-}
-.fav {
-  position: absolute;
-  width: 280px;
-  left: 350px;
-  bottom: -1200px;
-}
-.kem {
-  position: absolute;
-  width: 280px;
-  left: 200px;
-  bottom: -840px;
-}
-.nne {
-  position: absolute;
-  width: 280px;
-  left: 200px;
-  bottom: -470px;
-}
-.tob {
-  position: absolute;
-  width: 280px;
-  left: 800px;
-  bottom: -840px;
-}
-.san {
-  position: absolute;
-  width: 280px;
-  left: 800px;
-  bottom: -470px;
-}
-.group {
-     position: absolute;
-     width: 350px;
-     left: 310px;
-     top: 55px;
-   }
- .goal {
-    text-align: center;
-        display: inline-block;
-        bottom: -160px;
-        left: 10px;
-        position: absolute;
-      }
-</style>
+  <link rel="stylesheet" type="text/css" href="About_Us.css">
 </head>
 
-<!-- Menu bar  -->
+<body>
+  <h1> Fir3fly - <span class = "secondText"> Easing the path to education.</span>
+  </h1>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <body>
-  <div class="w3-container">
+  <ul>
+    <li><a class="active" href="#Home">Home</a></li>
+    <li><a href="#About_Us">About Us</a></li>
+    <li><a href="#Location">Location</a></li>
+    <li><a href="#Ways_to_give_back">Ways to give back</a></li>
+    <li><a href="#Events">Events</a></li>
+  </ul>
 
-  <div class="w3-bar w3-border w3-light-grey">
-    <a href="home.html" class="w3-bar-item w3-button w3-white">Home</a>
-    <a href="About_Us.html" class="w3-bar-item w3-button">About Us</a>
-    <a href="Location.html" class="w3-bar-item w3-button">Locations</a>
-    <a href="Ways_We_Give_Back.html" class="w3-bar-item w3-button">Ways to give back</a>
-    <a href="donation.html" class="w3-bar-item w3-button">Donations</a>
-    <a href="Events.html" class="w3-bar-item w3-button">Events</a>
+  <span class="group">
+
+  <div class="slideshow-container">
+
+    <div class="mySlides fade">
+      <div class="numbertext">1 / 3</div>
+      <img src="IMG_9358.JPG" style="width:40%; height:40%">
+    </div>
+
+    <div class="mySlides fade">
+      <div class="numbertext">2 / 3</div>
+      <img src="IMG_9352.JPG" style="width:40%; height:40%">
+    </div>
+
+    <div class="mySlides fade">
+      <div class="numbertext">3 / 3</div>
+      <img src="IMG_9310.JPG" style="width:40%; height:40%">
+    </div>
 
   </div>
 
-<!-- About Us Title for page -->
-  
-
-<!-- Group picture -->
-
-<span class="group">
-
-<div class="slideshow-container">
-
-  <div class="mySlides fade">
-    <div class="numbertext">1 / 3</div>
-    <img src="IMG_9358.JPG" style="width:200%; height:200%">
+  <div style="text-align:center">
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
   </div>
-
-  <div class="mySlides fade">
-    <div class="numbertext">2 / 3</div>
-    <img src="IMG_9352.JPG" style="width:200%; height:200%">
-  </div>
-
-  <div class="mySlides fade">
-    <div class="numbertext">3 / 3</div>
-    <img src="IMG_9310.JPG" style="width:200%; height:200%">
-  </div>
-</div>
-
-<br>
-
-<div style="text-align:center">
-  <span class="dot"></span>
-  <span class="dot"></span>
-  <span class="dot"></span>
-</div>
-
-<script src= slideshow.js> </script>
-
-
-</span>
-
-  
-
-<!-- Pictures and short bios for team -->
-<span class="fav">
-  <img id="Fav" src="IMG_9331.JPG" height="260px" width="180px">
-</span>
-
-<span class = "favour">
+  <script src= slideshow.js> </script>
+  </span>
   <br>
-  <p1> <em> <b> Favour </b> </em> </p1>
   <br>
-<p2>Hey my name is Favour Agabi. I am 15 years old and I am currently engaged in the Girl Code Program, located at First Data. I love running, helping others, going above and beyond and hanging out with friends.
-  I am very excited about this website due to the fact that it is all about helping others in need and just putting a smile on peoples faces, which is something you would do as a christian.</p2>
-</span>
-<span class="kem">
-  <img id="kem" src="IMG_9338.JPG" height="260px" width="180px">
-</span>
-
-  <span class = "kemi">
-  <p3> <em> <b> Kemi </b> </em> </p3>
   <br>
-<p4>Hey my name is Kemi Bakare. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love softball, running, hanging out with friends and traveling .
-   I’m very excited about this website because I’m helping change the world.</p4>
-</span>
-<span class="nne">
-  <img id="nne" src="IMG_9320.JPG" height="260px" width="180px">
-</span>
 
-  <span class = "nneoma">
-  <p5> <em> <b> Nneoma </b> </em></p5>
-  <br>
-<p6>Hey my name is Nneoma Emeka. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love reading, being creative and thinking.
-   I’m very excited about this website because I am making a difference in other people’s life.</p6>
- </span>
- <span class="tob">
-   <img id="tob" src="IMG_9326.JPG" height="260px" width="180px">
- </span>
 
- <span class = "tobenna">
-  <p7> <em> <b> Tobenna </b> </em></p7>
-  <br>
-<p8>Hey my name is Tobenna Obi. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love sleeping, baking and eating.
-  I’m very excited about this website because it brings me joy to help people.</p8>
-</span>
-<span class="san">
-  <img id="san" src="IMG_9345.JPG" height="260px" width="180px">
-</span>
 
-<span class = "sana">
-  <p9> <em> <b> Sana </b> </em></p9>
-  <br>
-<p10>Hey my name is Sana Siddiqi. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love writing and traveling.
-   I’m very excited about this website because it brings out my inner creativity and it's something I can look back and be proud of.</p10>
-</span>
+  <span class="fav">
+    <img id="Fav" src="IMG_9331.JPG" height="260px" width="180px">
+  </span>
 
-<!-- Goals section for page -->
+  <span class = "favour">
+    <br>
+    <p1> <em> <b> Favour </b> </em> </p1>
+    <br>
+  <p2>Hey my name is Favour Agabi. I am 15 years old and I am currently engaged in the Girl Code Program, located at First Data. I love running, helping others, going above and beyond and hanging out with friends.
+    I am very excited about this website due to the fact that it is all about helping others in need and just putting a smile on peoples faces, which is something you would do as a christian.</p2>
+  </span>
 
-<span class = "goal">
-     <p11 style="font-size: 45px; " > <em> Fir3fly's Goal  </em></p9>
-     <br>
-<p12 style="font-size: 35px;" > Our goal for the project is to expand and become worldwide someday, so we can help children all over the world to get a better education.</p12>
-</span>
+  <!-- section for Kemi -->
+
+  <span class="kem">
+    <img id="kem" src="IMG_9338.JPG" height="260px" width="180px">
+  </span>
+
+    <span class = "kemi">
+    <p3> <em> <b> Kemi </b> </em> </p3>
+    <br>
+  <p4>Hey my name is Kemi Bakare. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love softball, running, hanging out with friends and traveling .
+     I’m very excited about this website because I’m helping change the world.</p4>
+  </span>
+
+  <!-- section for Nneoma -->
+
+  <span class="nne">
+    <img id="nne" src="IMG_9320.JPG" height="260px" width="180px">
+  </span>
+
+    <span class = "nneoma">
+    <p5> <em> <b> Nneoma </b> </em></p5>
+    <br>
+  <p6>Hey my name is Nneoma Emeka. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love reading, being creative and thinking.
+     I’m very excited about this website because I am making a difference in other people’s life.</p6>
+   </span>
+
+  <!-- section for Tobenna -->
+
+   <span class="tob">
+     <img id="tob" src="IMG_9326.JPG" height="260px" width="180px">
+   </span>
+
+   <span class = "tobenna">
+    <p7> <em> <b> Tobenna </b> </em></p7>
+    <br>
+  <p8>Hey my name is Tobenna Obi. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love sleeping, baking and eating.
+    I’m very excited about this website because it brings me joy to help people.</p8>
+  </span>
+
+  <!-- section for sana -->
+
+  <span class="san">
+    <img id="san" src="IMG_9345.JPG" height="260px" width="180px">
+  </span>
+
+  <span class = "sana">
+    <p9> <em> <b> Sana </b> </em></p9>
+    <br>
+  <p10>Hey my name is Sana Siddiqi. I am 16 years old and I am also currently engaged in the Girl Code Program, located at First Data. I love writing and traveling.
+     I’m very excited about this website because it brings out my inner creativity and it's something I can look back and be proud of.</p10>
+  </span>
+
+  <span class = "goal">
+       <p11> <em> <b> Goal </b> </em></p9>
+       <br>
+  <p12> Our goal for the project is to expand and become worldwide someday, so we can help children all over the world to get a better education.</p12>
+  </span>
+
 </body>
+
 </html>
