--- a/About_Us.html
+++ b/About_Us.html
@@ -3,7 +3,7 @@
 
 <head>
   <title> About Us </title>
-  <link rel="stylesheet" type="text/css" href="">
+  <link rel="stylesheet" type="text/css" href="Fir3fly/About_Us.css">
 </head>
 
 <body>
@@ -11,11 +11,11 @@
   </h1>
 
   <ul>
-    <li><a class="active" href="#Home">Home</a></li>
-    <li><a href="#About_Us">About Us</a></li>
-    <li><a href="#Location">Location</a></li>
-    <li><a href="#Ways_to_give_back">Ways to give back</a></li>
-    <li><a href="#Events">Events</a></li>
+    <li><a class="active" href="Home.html">Home</a></li>
+    <li><a href="About_Us.html">About Us</a></li>
+    <li><a href="Location.html">Location</a></li>
+    <li><a href="Ways_to_give_back.html">Ways to give back</a></li>
+    <li><a href="Events.html">Events</a></li>
   </ul>
 
   <span class="group">
