--- a/About_Us.html
+++ b/About_Us.html
@@ -3,7 +3,7 @@
 
 <head>
   <title> About Us </title>
-  <link rel="stylesheet" type="text/css" href="Fir3fly/About_Us.css">
+  <link rel="stylesheet" type="text/css" href="About_Us.css">
 </head>
 
 <body>
