--- a/About_Us.html
+++ b/About_Us.html
@@ -11,7 +11,7 @@
   </h1>
 
   <ul>
-    <li><a class="active" href="Home.html">Home</a></li>
+    <li><a class="active" href="home.html">Home</a></li>
     <li><a href="About_Us.html">About Us</a></li>
     <li><a href="Location.html">Location</a></li>
     <li><a href="Ways_to_give_back.html">Ways to give back</a></li>
