--- a/home.html
+++ b/home.html
@@ -9,6 +9,8 @@
       <link rel="stylesheet" type="text/css" href="Home.css">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <style>
+</body>
+
 
 
       button {
@@ -57,6 +59,15 @@ li a:hover:not(.active) {
   display: block;
 }
 
+.break {
+  text-align: center;
+  display: block;
+}
+
+.Oprah{
+  text-align: center;
+  display: block;
+}
 
     </style>
 
@@ -81,36 +92,51 @@ li a:hover:not(.active) {
   <a href="Events.html" class="w3-bar-item w3-button">Events</a>
 </div>
 
+
+
       </h2>
+
+      <h3>
+        <h3 style = "font-family:century gothic; text-align:right; font-size: 25px" </h3>
+    <marquee behavior="scroll" direction="left" scrollamount="6">Education is the way to move mountains, to build bridges, to change the world. Education is the path to the future. <span class="break"> I believe that education is indeed freedom. </span> </marquee>
+</h3>
+
+
+<h4>
+  <h4 style = "font-family:century gothic; text-align:center; font-size: 25px" </h4>
+    <marquee behavior="scroll" direction="right" scrollamount="6"> <b><span class="Oprah"> -Oprah Winfery- </span> </b> </marquee>
+
+
+
 
       <div class="slideshow-container">
 
         <div class="mySlides fade">
           <div class="numbertext">1 / 6</div>
-          <img src="AAXO1ZOs6m.jpg" style="width:70%">
+          <img src="AAXO1ZOs6m.jpg" style="width:50%">
         </div>
 
         <div class="mySlides fade">
           <div class="numbertext">2 / 6</div>
-          <img src="Indian-children-attend-a--008.jpg" style="width:70%">
+          <img src="Indian-children-attend-a--008.jpg" style="width:50%">
         </div>
 
         <div class="mySlides fade">
           <div class="numbertext">3 / 6</div>
-          <img src="KIDS IN CLASS.JPG" style="width:60%">
+          <img src="KIDS IN CLASS.JPG" style="width:50%">
         </div>
 
         <div class="mySlides fade">
           <div class="numbertext">4 / 6</div>
-          <img src="images.jpg" style="width:70%">
+          <img src="images.jpg" style="width:50%">
         </div>
          <div class="mySlides fade">
           <div class="numbertext">5 / 6</div>
-          <img src="images1.jpg" style="width:60%" "height:30%">
+          <img src="images1.jpg" style="width:50%">
         </div>
           <div class="mySlides fade">
           <div class="numbertext">6 / 6</div>
-          <img src="images3.jpg" style="width:70%">
+          <img src="images3.jpg" style="width:50%">
         </div>
 
       </div>
@@ -130,9 +156,11 @@ li a:hover:not(.active) {
 
       <h3>
         <h1 style = "font-family:Papyrus;text-align: Center; font-size: 50px"> Our Mission </h3>
-        
-       
+
       <p1 style="text-align:center; overflow: hidden; font-size:25px "> <em> <b><span class="grey-box"> Our mission is to provide children a pathway to success through education. By providing them with the supplies they need, we are setting a bright future for them and we will strive to give them excellent quality of life.</span></em></b>
       </p1>
+
+
+
 </body>
 </html>
