--- a/Location.html
+++ b/Location.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  
+
   <title> Locations </title>
-  
+
 </head>
 <body>
-  
-  
-  <style>
 
+
+  <style>
 a:link {
   font-size: 25px;
   font-family: 'papyrus'
@@ -18,7 +17,6 @@ a:link {
  text-align: right;
   font-size: 30px;
   font-family: 'century gothic';
-
 }
 
 </style>
@@ -39,11 +37,31 @@ a:link {
   <a href="Ways_We_Give_Back.html" class="w3-bar-item w3-button">Ways to give back</a>
   <a href="donation.html" class="w3-bar-item w3-button">Donations</a>
   <a href="Events.html" class="w3-bar-item w3-button">Events</a>
- 
-        
+
+
 <br>
 
   </div>
 <iframe src="https://www.google.com/maps/d/embed?mid=1aUHA4u8UwR84uWIwMdz70eY-3mU" width="1400" height="400"></iframe>
+
+<br>
+
+<h2 style = "font-family": papyrus; text-align: center; font-size:200px"> <b> **We meet the the 1ST FRIDAY of every month** <b> </h2>
+
+  <br>
+
+<h3 style = "font-family": papyrus; text-align: left; font-size: 100px"> <i> Parkview High School <i> </h3>
+<p style = "font-family": papyrus; text-align: left; font-size: 50px"> 998 Cole Dr SW, Lilburn, GA 30047 </p>
+<p style = "font-family": papyrus; text-align: left; font-size: 50px"> Come Support Us!! </p>
+
+<br>
+<br>
+<br>
+
+
+
+<h4 style = "font-family": papyrus; text-align: left; font-size: 100px"> <i> Grayson High School <i> </h4>
+<p style = "font-family": papyrus; text-align: center; font-size: 50px"> 1255 Dogwood Rd SW, Snellville, GA 30078 </p>
+<p style = "font-family": papyrus; text-align: left; font-size: 50px"> Come Support Us!! </p>
 </body>
 </html>
