--- a/About_Us.html
+++ b/About_Us.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
-  <h1> Fir3fly - <span class = "secondText"> Easing the path to education.</span>
+  <h1> Fir3fly - 
+    <span class = "secondText"> Easing the path to education.
+    </span>
   </h1>
 
   <ul>
