--- a/home.html
+++ b/home.html
@@ -104,7 +104,7 @@ li a:hover:not(.active) {
 
 <h4>
   <h4 style = "font-family:century gothic; text-align:center; font-size: 25px" </h4>
-    <marquee behavior="scroll" direction="right" scrollamount="6"> <b><span class="Oprah"> -Oprah Winfery- </span> </b> </marquee>
+    <marquee behavior="scroll" direction="right" scrollamount="6"> <b><span class="Oprah"> -Oprah Winfrey- </span> </b> </marquee>
 
 
 
