--- a/Events.html
+++ b/Events.html
@@ -150,7 +150,7 @@ a:link {
 
   <div id="calendar"></div>
 
- <h3 style= "text-align: center"> The calender shows upcoming events in the Fir3fly organisation. </h3>
+ <h3 style= "text-align: center"> The calender shows upcoming events in the Fir3fly organization. </h3>
 
 
 
