--- a/About_Us.html
+++ b/About_Us.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <h1> Fir3fly - 
+  <h1 style = "Font-family: papyrus; text-align: right; font-size: 50px" > Fir3fly - 
     <span class = "secondText"> Easing the path to education.
     </span>
   </h1>
