--- a/home.html
+++ b/home.html
@@ -98,13 +98,13 @@ li a:hover:not(.active) {
 
       <h3>
         <h3 style = "font-family:century gothic; text-align:right; font-size: 25px" </h3>
-    <marquee behavior="scroll" direction="left" scrollamount="6">Education is the way to move mountains, to build bridges, to change the world. Education is the path to the future. <span class="break"> I believe that education is indeed freedom. </span> </marquee>
+    <marquee behavior="scroll" direction="left" scrollamount="6"> <span class="break"> Education is the most powerful weapon which you can use to change the world.</span> </marquee>
 </h3>
 
 
 <h4>
   <h4 style = "font-family:century gothic; text-align:center; font-size: 25px" </h4>
-    <marquee behavior="scroll" direction="right" scrollamount="6"> <b><span class="Oprah"> -Oprah Winfrey- </span> </b> </marquee>
+    <marquee behavior="scroll" direction="right" scrollamount="6"> <b><span class="Nelson"> -Nelson Mandela- </span> </b> </marquee>
 
 
 
