--- a/About_Us.html
+++ b/About_Us.html
@@ -15,7 +15,7 @@
   <ul>
     <li><a class="active" href="home.html">Home</a></li>
     <li><a href="About_Us.html">About Us</a></li>
-    <li><a href="Location.html">Location</a></li>
+    <li><a href="Location.html">Locations</a></li>
     <li><a href="Ways_to_give_back.html">Ways to give back</a></li>
     <li><a href="Events.html">Events</a></li>
   </ul>
