--- a/home.html
+++ b/home.html
@@ -6,13 +6,11 @@
 
 
       <title> Fir3fly </title>
-      <link rel="stylesheet" type="text/css" href="Home.css">
+      <link rel="stylesheet" type="text/css" href="g.css">
+      <link rel="stylesheet" type="text/css" href="h.css">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <style>
 </body>
-
-
-
       button {
   background-color: transparent;
   border: none;
@@ -23,12 +21,10 @@
   font-family: 'Courier';
   cursor: pointer;
   }
-
   a:link {
     color: black;
     font-family: 'Papyrus';
     font-size: 25px;
-
   }
         .secondText {
   font-size: 30px;
@@ -36,44 +32,36 @@
   font-family: 'Century gothic';
   {}
   }
-
 li a:hover:not(.active) {
   background-color: #7D1935;
 }
-
 .active {
   background-color: #F5F3EE;
 }
-
 .navigation {
   left: 200px;
   display: inline-block;
-
 }
-
 .grey-box {
-
   background-color: #dfdbff;
   width: auto;
   height: 120px;
   display: block;
 }
-
 .break {
   text-align: center;
   display: block;
 }
-
 .Oprah{
   text-align: center;
   display: block;
 }
-
     </style>
 
     </head>
 
     <body  style = "background-color: #ffefdb ">
+
   <h1 style = "font-family:Papyrus;text-align: right; font-size: 50px">Fir3fly - <span class = "secondText"> Easing the path to education.</span></h1>
       <h2>
      <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -97,14 +85,18 @@ li a:hover:not(.active) {
       </h2>
 
       <h3>
-        <h3 style = "font-family:century gothic; text-align:right; font-size: 25px" </h3>
-    <marquee behavior="scroll" direction="left" scrollamount="6"> <span class="break"> Education is the most powerful weapon which you can use to change the world.</span> </marquee>
+        <h3 style = "font-family:century gothic; text-align:center; font-size: 25px" </h3>
+          <div id="moveonetext">
+    <p14 style="text-align:center"> Education is the most powerful weapon which you can use to change the world.<p14>
+          </div>
 </h3>
 
 
 <h4>
   <h4 style = "font-family:century gothic; text-align:center; font-size: 25px" </h4>
-    <marquee behavior="scroll" direction="right" scrollamount="6"> <b><span class="Nelson"> -Nelson Mandela- </span> </b> </marquee>
+    <div id="moveanothertext">
+    <p15 style="text-align: center"> <b> -Nelson Mandela- </p15>
+    </div>
 
 
 
