--- a/About_Us.html
+++ b/About_Us.html
@@ -119,7 +119,7 @@
   </span>
 
   <span class = "goal">
-       <p11> <em> <b> Goal </b> </em></p9>
+       <p11> <em> <b> Fir3fly's Goal </b> </em></p9>
        <br>
   <p12> Our goal for the project is to expand and become worldwide someday, so we can help children all over the world to get a better education.</p12>
   </span>
