--- a/home.html
+++ b/home.html
@@ -6,8 +6,8 @@
 
 
       <title> Fir3fly </title>
-      <link rel="stylesheet" type="text/css" href="Fir3fly/g.css">
-      <link rel="stylesheet" type="text/css" href="Fir3fly/h.css">
+      <link rel="stylesheet" type="text/css" href="g.css">
+      <link rel="stylesheet" type="text/css" href="h.css">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <style>
 </body>
