--- a/About_Us.html
+++ b/About_Us.html
@@ -8,8 +8,8 @@
 
 <body>
   <h1 style = "Font-family: papyrus; text-align: right; font-size: 50px" > Fir3fly - 
-    <span class = "secondText"> Easing the path to education.
-    </span>
+    <p class = "secondText"> Easing the path to education.
+    </p>
   </h1>
 
   <ul>
