--- a/home.html
+++ b/home.html
@@ -149,7 +149,7 @@ li a:hover:not(.active) {
       <h3>
         <h1 style = "font-family:Papyrus; text-align:Center; font-size: 50px"> Our Mission </h3>
 
-      <p1 style="font-family:century gothic; text-align:center; overflow: hidden; font-size:30px "> <em> <b><span class="grey-box"> Our mission is to provide children a pathway to success through education. By providing them with the supplies they need, we are setting a bright future for them and we will strive to give them excellent quality of life.</span></em></b>
+      <p1 style="font-family:century gothic; text-align:center; overflow: hidden; font-size:30px "> <em> <b><span class="grey-box"> Our mission is to provide children a pathway to success through education. By providing them with the supplies they need, we are setting a bright future for them and we will strive to give them an excellent quality of life.</span></em></b>
       </p1>
 
 
