--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
   font-size: 100px;
   left: 250px;
   color: black;
-  font-family: 'Courier';
+  font-family: 'Century Gothic';
   cursor: pointer;
   }
   a:link {
