--- a/Location.html
+++ b/Location.html
@@ -60,7 +60,7 @@ a:link {
 
 
 
-<h4 style = "font-family": papyrus; text-align: left; font-size: 100px"> <i> Grayson High School <i> </h4>
+<h4 style = "font-family": papyrus; text-align: left; font-size: 100px"> <i> Brookwood High School <i> </h4>
 <p style = "font-family": papyrus; text-align: center; font-size: 50px"> 1255 Dogwood Rd SW, Snellville, GA 30078 </p>
 <p style = "font-family": papyrus; text-align: left; font-size: 50px"> Come Support Us!! </p>
 </body>
