--- a/About_Us.html
+++ b/About_Us.html
@@ -7,9 +7,7 @@
 </head>
 
 <body>
-  <h1 style = "Font-family: papyrus; text-align: right; font-size: 50px" > Fir3fly - 
-    <p class = "secondText"> Easing the path to education.
-    </p>
+<h1 style = "Font-family: papyrus; text-align: right; font-size: 50px">Fir3fly - <span class = "secondText"> Easing the path to education.</span></h1>
   </h1>
 
   <ul>
